--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.0.0",
     "cross-env": "^5.2.0",
-    "express": "^4.16.3",
     "nuxt": "^2.0.0",
-    "p5": "^0.7.2",
-    "vue-leaflet": "^0.1.0",
-    "vuetify": "^1.2.4"
+    "express": "^4.16.3",
+    "vuetify": "^1.2.4",
+    "@nuxtjs/axios": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
