--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "nuxt": "^2.0.0",
+    "vue2-leaflet": "^1.2.3",
     "vuetify": "^1.2.4"
   },
   "devDependencies": {
